@@ -1,3 +1,13 @@
+2014-10-06  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
+
+	* nasl/strutils.c: Removed unneeded includes.
+
+	* nasl/strutils.h: Remove unneeded include.
+
+	* nasl/nasl_builtin_openvas_tcp_scanner.c: Removed unneeded include.
+
+	* nasl/nasl_text_utils.c: Made include of regex.h no look local.
+
 2014-10-06  Timo Pollmeier <timo.pollmeier@greenbone.net>
 
 	Make the manager response buffer a local variable of
